--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -16,12 +16,14 @@ categories:
   framework: 'Front-end Frameworks'
   nodejsframework: 'Node.js Frameworks'
   react: 'React Ecosystem'
+  vue: 'Vue Ecosystem'
   mobile: 'Mobile'
   compiler: 'Compilers'
   build: 'Build Tools'
   testframework: 'Testing Frameworks'
   ide: 'IDE'
   ssg: 'Static Site Generators'
+  cssinjs: 'CSS in JavaScript'
 
 social:
   text: "Check the JavaScript landscape in 2017"  
