--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -26,5 +26,20 @@ categories:
   cssinjs: 'CSS in JavaScript'
   graphql: 'GraphQL'
 
+categories-share:
+  all: "JavaScript project"
+  framework: 'front-end framework'
+  nodejsframework: 'Node project'
+  react: 'React library'
+  vue: 'Vue library'
+  mobile: 'mobile framework'
+  compiler: 'JavaScript compiler'
+  build: 'build tool'
+  testframework: 'JavaScript testing framework'
+  ide: 'IDE'
+  ssg: 'JavaScript static site generator'
+  cssinjs: 'CSS-in-JS library'
+  graphql: 'JavaScript GraphQL project'
+
 social:
   text: "Check the JavaScript landscape in 2017"  
