--- a/i18n/2017/messages/fr.yaml
+++ b/i18n/2017/messages/fr.yaml
@@ -1,15 +1,15 @@
 # Meta data
 page:
-  title: "Les étoiles filantes JavaScript 2017"
+  title: "Les Meilleurs Projets JavaScript en 2017"
   description: "Un panorama complet du paysage du language JavaScript en 2017, côté client, serveur, mobile..."
 
 # Page content
 header:
-  title: "Les étoiles filantes JavaScript 2017"
+  title: "Les Meilleurs Projets JavaScript en 2017"
 introduction:
   table_of_contents: "Sommaire"
-  explanation: "Les chiffres présentés sont les nombres d'étoile ajoutés sur GitHub au cours de l'année 2017."
-conclusion: "Les grandes et petites histoire de l'année"
+  explanation: "Les chiffres présentés sont les nombres d'étoiles ajoutées sur GitHub au cours de l'année 2017. Les projets présentés proviennent de {link}, une application web qui rassemble toutes les tendances liées au développement web."
+conclusion: "Les grandes et petites histoires de l'année"
 
 categories:
   all: "Projets les plus populaires en 2017"
