--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -12,7 +12,7 @@ introduction:
 conclusion: "Stories of the Year"
 
 categories:
-  all: "Most Popular Projects"
+  all: "Most Popular Projects in 2017"
   framework: 'Front-end Frameworks'
   nodejsframework: 'Node.js Frameworks'
   react: 'React Ecosystem'
