--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -12,7 +12,7 @@ introduction:
 conclusion: "Stories of the Year"
 
 categories:
-  all: "Most Popular Projects in 2017"
+  all: "Most Popular Projects"
   framework: 'Front-end Frameworks'
   nodejsframework: 'Node.js Frameworks'
   react: 'React Ecosystem'
@@ -22,7 +22,7 @@ categories:
   build: 'Build Tools'
   testframework: 'Testing Frameworks'
   ide: 'IDE'
-  ssg: 'Static Site Generators'
+  ssg: 'Static Sites'
   cssinjs: 'CSS in JavaScript'
   graphql: 'GraphQL'
 
