Improve Chinese translation

--- a/i18n/2017/messages/zh.yaml
+++ b/i18n/2017/messages/zh.yaml
@@ -1,7 +1,7 @@
 # Meta data
 page:
-  title: "2017 年崛起的 JS 项目"
-  description: "对 2017 年 JS 领域的完整回顾，内容包括：框架、工具、IDE、静态网站生成器..."
+  title: "2017年崛起的JS项目"
+  description: "对2017年JS领域的完整回顾，内容包括：框架、工具、IDE、静态网站生成器..."
 
 # Page content
 header:
@@ -14,9 +14,9 @@ conclusion: "总结"
 categories:
   all: "最受欢迎项目"
   framework: '前端框架'
-  nodejsframework: 'Node.js 框架'
-  react: 'React 项目模板'
-  vue: 'Vue Ecosystem'
+  nodejsframework: 'Node.js框架'
+  react: 'React项目模板'
+  vue: 'Vue生态键'
   mobile: '移动开发'
   compiler: '编译工具'
   build: '构建工具'
