--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -12,7 +12,7 @@ introduction:
 conclusion: "Stories of the Year"
 
 categories:
-  all: "Most Popular Projects"
+  all: "Most Popular Projects Overall"
   framework: 'Front-end Frameworks'
   nodejsframework: 'Node.js Frameworks'
   react: 'React Ecosystem'
@@ -21,9 +21,24 @@ categories:
   compiler: 'Compilers'
   build: 'Build Tools'
   testframework: 'Testing Frameworks'
-  ide: 'IDE'
+  ide: 'IDEs & Editors'
   ssg: 'Static Sites'
   cssinjs: 'CSS in JavaScript'
+  graphql: 'GraphQL'
+
+categories-short:
+  all: "Overall"
+  framework: 'Front-end'
+  nodejsframework: 'Node.js'
+  react: 'React'
+  vue: 'Vue'
+  mobile: 'Mobile'
+  compiler: 'Compilers'
+  build: 'Build Tools'
+  testframework: 'Testing'
+  ide: 'Editors'
+  ssg: 'Static Sites'
+  cssinjs: 'CSS-in-JS'
   graphql: 'GraphQL'
 
 categories-share:
