Translate hard-coded newsletter messages

--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -55,6 +55,8 @@ categories-share:
   ssg: 'JavaScript static site generator'
   cssinjs: 'CSS-in-JS library'
   graphql: 'JavaScript GraphQL project'
-
 social:
-  text: "Check the JavaScript landscape in 2017"  
+  text: "Check the JavaScript landscape in 2017"
+newsletter:
+  title: "Get the latest JS rankings in your inbox every week"
+  signup: "Sign up for {link}'s newsletter, and you'll receive exclusive stats about the most popular JavaScript projects each week."  
