--- a/i18n/2017/messages/zh.yaml
+++ b/i18n/2017/messages/zh.yaml
@@ -21,13 +21,13 @@ categories:
   compiler: '编译工具'
   build: '构建工具'
   testframework: '测试框架'
-  ide: 'IDE'
+  ide: 'IDE和编辑器'
   ssg: '静态网站生成器'
   cssinjs: 'CSS in JavaScript'
   graphql: 'GraphQL'  
 
 categories-short:
-  all: "概览"
+  all: "总体回顾"
   framework: '前端'
   nodejsframework: 'Node.js'
   react: 'React'
@@ -50,20 +50,22 @@ categories-share:
   mobile: '移动开发'
   compiler: '编译工具'
   build: '构建工具'
-  testframework: '测试框架'
+  testframework: 'JavaScript 测试框架'
   ide: 'IDE'
-  ssg: '静态网站生成器'
+  ssg: '静态网站'
   cssinjs: 'CSS in JavaScript'
-  graphql: 'GraphQL'  
+  graphql: 'Javascript GraphQL 项目'
+
 social:
-  text: "2017年JS明星项目"
+  text: "2017年JavaScript领域回顾"
+
 newsletter:
   title: "每周收到最新的 JS 排名"
   signup: "在 {link} 订阅我们的邮件列表，你就能每周收到最新最流行的关于 JavaScript 项目趋势的独家报告。"
 view_project:
   twitter:
-    text: "In {year}, {name} added {delta} stars, making it the #{ranking} most popular {category} on GitHub"
+    text: "在{year}年, {name} 增加了 {delta} stars数量, 在 Github {category} 分类中排名第 {ranking}。 "
     action: Tweet
-  months: "J F M A M J J A S O N D"
-  created: "Created"
-  homepage: "Homepage"  
+  months: "1月 2月 3月 4月 5月 6月 7月 8月 9月 10月 11月 12月"
+  created: "创建"
+  homepage: "项目主页"  
