Add SSG and CSS-in-JS French comments :flag-fr:

--- a/i18n/2017/messages/fr.yaml
+++ b/i18n/2017/messages/fr.yaml
@@ -23,7 +23,7 @@ categories:
   testframework: 'Frameworks de test'
   ide: 'Editeurs de text'
   ssg: 'Générateurs de Site Statique'
-  cssinjs: 'CSS dans JavaScript'
+  cssinjs: 'Feuilles de style en JavaScript'
   graphql: 'GraphQL'
 
 categories-share:
