--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -9,7 +9,7 @@ header:
 introduction:
   table_of_contents: "Table of Contents"
   explanation: "The following graphs compare the number of stars added on Github over the last 12 months. We analyzed projects coming from {link}, a curated list of the best projects related to the web platform. Note that you can click on a project to get more info."
-conclusion: "Stories of the Year"
+conclusion: "Conclusion"
 
 categories:
   all: "Most Popular Projects Overall"
