--- a/i18n/common/es.yaml
+++ b/i18n/common/es.yaml
@@ -1,10 +1,10 @@
 newsletter:
-  title: "Get the latest JS rankings in your inbox every week"
-  signup: "Sign up for {link}'s newsletter, and you'll receive exclusive stats about the most popular JavaScript projects each week."  
+  title: "Recibe los últimos rankings de JavaScript en tu email cada semana"
+  signup: "Date de alta en la newsletter de {link} y recibirás estadísticas exclusivas sobre los proyectos más populares de JavaScript cada semana."
 view_project:
   twitter:
-    text: "In {year}, {name} added {delta} stars, making it the #{ranking} most popular {category} on GitHub"
+    text: "En {year}, {name} consiguió {delta} estrellas, llegando a alcanzar el puesto #{ranking} en {category} en GitHub"
     action: Tweet
-  months: "J F M A M J J A S O N D"
-  created: "Created"
-  homepage: "Homepage"    
+  months: "E F M A M J J A S O N D"
+  created: "Creado"
+  homepage: "Home"
