--- a/i18n/common/en.yaml
+++ b/i18n/common/en.yaml
@@ -1,6 +1,8 @@
 newsletter:
   title: "Get the latest JS rankings in your inbox every week"
-  signup: "Sign up for {link}'s newsletter, and you'll receive exclusive stats about the most popular JavaScript projects each week."  
+  text: "Sign up for {link}'s newsletter, and you'll receive exclusive stats about the most popular JavaScript projects each week."  
+  button: "Sign Up"
+  placeholder: "Your email"
 view_project:
   twitter:
     text: "In {year}, {name} added {delta} stars, making it the #{ranking} most popular {category} on GitHub"
