--- a/i18n/2017/messages/zh.yaml
+++ b/i18n/2017/messages/zh.yaml
@@ -8,7 +8,7 @@ header:
   title: "2017年 JavaScript 明星项目"
 introduction:
   table_of_contents: "目录"
-  explanation: "下列图表对比了各个项目在 Github 上于过去 12 个月新增的 star 数量。分析的数据来源 {link} 网站 ，这是一个精选 WEB 领域优秀项目的网站。提醒一下，点击项目可以看到更多信息。"
+  explanation: "下列图表对比了各个项目在 Github 上于过去12个月新增的 star 数量。分析的数据来源 {link} 网站 ，这是一个精选 WEB 领域优秀项目的网站。提醒一下，点击项目可以看到更多信息。"
 conclusion: "总结"
 
 categories:
@@ -24,6 +24,21 @@ categories:
   ide: 'IDE和编辑器'
   ssg: '静态网站生成器'
   cssinjs: 'CSS in JavaScript'
+  graphql: 'GraphQL'  
+
+categories-short:
+  all: "总体回顾"
+  framework: '前端'
+  nodejsframework: 'Node.js'
+  react: 'React'
+  vue: 'Vue'
+  mobile: '移动端'
+  compiler: '编译工具'
+  build: '构建工具'
+  testframework: '测试工具'
+  ide: '编辑器'
+  ssg: '静态网站生成器'
+  cssinjs: 'CSS-in-JS'
   graphql: 'GraphQL'
 
 categories-share:
