--- a/i18n/common/fr.yaml
+++ b/i18n/common/fr.yaml
@@ -1,8 +1,6 @@
 newsletter:
   title: "Les chiffres de la semaine dans votre boite à lettres"
-  text: "Abonnez-vous à la newsletter {link}, et vous recevrez toutes les semaines un récapitulatif des dernières tendances de l'univers JavaScript!"
-  button: "S'abonner"
-  placeholder: "Votre email"
+  signup: "Abonnez-vous à la newsletter {link}, et vous recevrez toutes les semaines un récapitulatif des dernières tendances de l'univers JavaScript!"   
 view_project:
   twitter:
     text: "En {year}, avec plus de {delta} étoiles gagnées sur GitHub, {name} a été {category} numéro {ranking}."
