--- a/i18n/common/ja.yaml
+++ b/i18n/common/ja.yaml
@@ -1,8 +1,6 @@
 newsletter:
   title: "Get the latest JS rankings in your inbox every week"
-  text: "Sign up for {link}'s newsletter, and you'll receive exclusive stats about the most popular JavaScript projects each week."  
-  button: "Sign Up"
-  placeholder: "Your email"
+  signup: "Sign up for {link}'s newsletter, and you'll receive exclusive stats about the most popular JavaScript projects each week."  
 view_project:
   twitter:
     text: "In {year}, {name} added {delta} stars, making it the #{ranking} most popular {category} on GitHub"
