--- a/i18n/common/zh.yaml
+++ b/i18n/common/zh.yaml
@@ -1,7 +1,7 @@
 newsletter:
   title: "每周收到最新的 JS 排名"
-  text: "在下面注册 {link} 的订阅邮件列表，就能每周收到最新最流行的 JavaScript 项目趋势发展的独家报告哦！"
-  button: "注  册"
+  text: "在下面订阅 {link} 的通讯周刊，就能每周收到最新最流行的 JavaScript 项目趋势发展的独家报告"
+  button: "订   阅"
   placeholder: "您的邮箱"  
 view_project:
   twitter:
