:sparkles: Added a Miscellaneous category (WIP)

--- a/i18n/2017/messages/en.yaml
+++ b/i18n/2017/messages/en.yaml
@@ -25,6 +25,7 @@ categories:
   ssg: 'Static Sites'
   cssinjs: 'CSS in JavaScript'
   graphql: 'GraphQL'
+  misc: 'Miscellaneous'
 
 categories-share:
   all: "JavaScript project"
