--- a/i18n/2017/messages/id.yaml
+++ b/i18n/2017/messages/id.yaml
@@ -1,18 +1,18 @@
 # Meta data
 page:
-  title: "2017 JavaScript Rising Stars"
-  description: "A complete overview of the JavaScript landscape in 2017: trends about front-end and node.js frameworks, tooling, IDE, Static site generators..."
+  title: "JavaScript Rising Stars 2017"
+  description: "Sebuah pandangan lengkap tentang dunia JavaScript di tahun 2017: tren seputar frameworks front-end dan node.js, tooling, IDE, Static site generators..."
 
 # Page content
 header:
-  title: "2017 JavaScript Rising Stars"
+  title: "JavaScript Rising Stars 2017"
 introduction:
-  table_of_contents: "Table of Contents"
-  explanation: "The following graphs compare the number of stars added on Github over the last 12 months. We analyzed projects coming from {link}, a curated list of the best projects related to the web platform. Note that you can click on a project to get more info."
-conclusion: "Conclusion"
+  table_of_contents: "Daftar Isi"
+  explanation: "Grafik berikut membandingkan jumlah bintang yang diterima di GitHub selama 12 terakhir. Kami menganalisa proyek-proyek dari {link}, sebuah daftar proyek-proyek terbaik di dunia web. Ingat bahwa anda bisa mengklik salah satu proyek untuk mendapatkan informasi lebih lengkap."
+conclusion: "Kesimpulan"
 
 categories:
-  all: "Most Popular Projects Overall"
+  all: "Proyek Paling Populer Secara Keseluruhan"
   framework: 'Front-end Frameworks'
   nodejsframework: 'Node.js Frameworks'
   react: 'React Ecosystem'
@@ -42,4 +42,4 @@ categories-share:
   graphql: 'JavaScript GraphQL project'
 
 social:
-  text: "Check the JavaScript landscape in 2017"
+  text: "Cari tahu proyek JavaScript paling populer tahun 2017"
