:es: Translation for misc category name

--- a/i18n/2017/messages/es.yaml
+++ b/i18n/2017/messages/es.yaml
@@ -25,6 +25,7 @@ categories:
   ssg: 'SSG'
   cssinjs: 'CSS en JavaScript'
   graphql: 'GraphQL'
+  misc: 'Miscelánea'
 
 categories-share:
   all: "Proyecto JavaScript"
