--- a/i18n/2017/messages/zh.yaml
+++ b/i18n/2017/messages/zh.yaml
@@ -21,10 +21,11 @@ categories:
   compiler: '编译工具'
   build: '构建工具'
   testframework: '测试框架'
-  ide: 'IDE和编辑器'
+  ide: 'IDE 和编辑器'
   ssg: '静态网站生成器'
   cssinjs: 'CSS in JavaScript'
   graphql: 'GraphQL'
+  misc: '杂项'
 
 categories-share:
   all: "JavaScript 项目"
