Add misc under categories section.

--- a/i18n/2017/messages/ja.yaml
+++ b/i18n/2017/messages/ja.yaml
@@ -25,5 +25,6 @@ categories:
   ssg: '静的サイトジェネレータ'
   cssinjs: 'CSS in JavaScript'
   graphql: 'GraphQL'  
+  misc: '番外編'
 social:
   text: "「2017年 JavaScript 白書」をチェックする"
