--- a/i18n/common/ja.yaml
+++ b/i18n/common/ja.yaml
@@ -1,12 +1,12 @@
 newsletter:
-  title: "Get the latest JS rankings in your inbox every week"
-  text: "Sign up for {link}'s newsletter, and you'll receive exclusive stats about the most popular JavaScript projects each week."  
-  button: "Sign Up"
-  placeholder: "Your email"
+  title: "最新の JS ランキングを毎週配信します"
+  text: "{link} からサインアップ。いまもっとも熱い JavaScript プロジェクトをウィークリーでお届けします。"  
+  button: "サインアップ"
+  placeholder: "メールアドレス"
 view_project:
   twitter:
-    text: "In {year}, {name} added {delta} stars, making it the #{ranking} most popular {category} on GitHub"
+    text: "{year}, GitHub で {delta} スターを獲得した {name} は {category} 部門で {ranking} 位。"
     action: Tweet
-  months: "J F M A M J J A S O N D"
-  created: "Created"
-  homepage: "Homepage"   
+  months: "1月 2月 3月 4月 5月 6月 7月 8月 9月 10月 11月 12月"
+  created: "作成日"
+  homepage: "WEB サイト"
