Add Angular category, exclude learning projects

--- a/i18n/2018/messages/en.yaml
+++ b/i18n/2018/messages/en.yaml
@@ -17,6 +17,7 @@ categories:
   nodejsframework: "Node.js Frameworks"
   react: "React Ecosystem"
   vue: "Vue Ecosystem"
+  angular: "Angular Ecosystem"
   mobile: "Mobile"
   compiler: "Compilers"
   build: "Build Tools"
@@ -33,6 +34,7 @@ categories-share:
   nodejsframework: "Node project"
   react: "React library"
   vue: "Vue library"
+  angular: "Angular library"
   mobile: "mobile framework"
   compiler: "JavaScript compiler"
   build: "build tool"
