--- a/i18n/2018/messages/es.yaml
+++ b/i18n/2018/messages/es.yaml
@@ -1,22 +1,23 @@
 # Meta data
 page:
-  title: "Los mejores proyectos JavaScript del 2017"
-  description: "Un completo análisis del universo JavaScript en 2017: tendencias en front-end y frameworks node.js, herramientas, IDE, Generadores de páginas estáticas..."
+  title: "Los mejores proyectos JavaScript del 2018"
+  description: "Un completo análisis del universo JavaScript en 2018: tendencias en front-end y frameworks node.js, herramientas, IDE, Generadores de páginas estáticas..."
 
 # Page content
 header:
-  title: "Los mejores proyectos JavaScript del 2017"
+  title: "Los mejores proyectos JavaScript del 2018"
 introduction:
   table_of_contents: "Categorías"
   explanation: "Los siguientes gráficos comparan el número de estrellas añadidas en GitHub durante los últimos 12 meses. Hemos analizado proyectos procedentes de {link}, una lista de los proyectos más destacados del mundo web cuidadosamente seleccionados. Si lo deseas, puedes hacer click en cualquier proyecto para conseguir más información."
 conclusion: "Conclusión"
 
 categories:
-  all: "Proyectos más populares del 2017"
+  all: "Proyectos más populares del 2018"
   framework: 'Frameworks Front-end'
   nodejsframework: 'Frameworks Node.js'
   react: 'Ecosistema React'
   vue: 'Ecosistema Vue'
+  angular: 'Ecosistema Angular'
   mobile: 'Móvil'
   compiler: 'Compiladores JS'
   build: 'Build'
@@ -33,6 +34,7 @@ categories-share:
   nodejsframework: 'Proyecto Node'
   react: 'Librería React'
   vue: 'Librería Vue'
+  angular: 'Librería Angular'
   mobile: 'Framework móvil'
   compiler: 'Compilador JavaScript'
   build: 'Build'
@@ -43,4 +45,4 @@ categories-share:
   graphql: 'Proyecto GraphQL JavaScript'
 
 social:
-  text: "Echa una vistazo al universo JavaScript del 2017"
+  text: "Echa una vistazo al universo JavaScript del 2018"
