--- a/i18n/2018/messages/ja.yaml
+++ b/i18n/2018/messages/ja.yaml
@@ -26,6 +26,6 @@ categories:
   cssinjs: 'CSS in JavaScript'
   graphql: 'GraphQL'  
   misc: '番外編'
-
+  learning: "Learning Resource"
 social:
   text: "「2017年 JavaScript 白書」をチェックする"
