Added es translation 2019

--- a/i18n/2019/messages/es.yaml
+++ b/i18n/2019/messages/es.yaml
@@ -45,4 +45,4 @@ categories-share:
   graphql: 'Proyecto GraphQL JavaScript'
   learning: 'Recurso de aprendizaje'
 social:
-  text: 'Echa una vistazo al universo JavaScript del 2019'
+  text: 'Echa un vistazo al universo JavaScript del 2019'
