Add more projects to the testing category

--- a/i18n/2019/messages/en.yaml
+++ b/i18n/2019/messages/en.yaml
@@ -21,7 +21,7 @@ categories:
   mobile: 'Mobile'
   compiler: 'Compilers'
   build: 'Build Tools'
-  testframework: 'Testing Frameworks'
+  testframework: 'Testing'
   ide: 'IDEs & Editors'
   ssg: 'Static Sites'
   cssinjs: 'CSS in JavaScript'
@@ -38,7 +38,7 @@ categories-share:
   mobile: 'mobile framework'
   compiler: 'JavaScript compiler'
   build: 'build tool'
-  testframework: 'JavaScript testing framework'
+  testframework: 'JavaScript testing'
   ide: 'IDE'
   ssg: 'JavaScript static site generator'
   cssinjs: 'CSS-in-JS library'
