--- a/i18n/common/ja.yaml
+++ b/i18n/common/ja.yaml
@@ -5,8 +5,10 @@ newsletter:
   placeholder: "あなたのメールアドレス"
 view_project:
   twitter:
-    text: "{year}, GitHub で {delta} スターを獲得した {name} は {category} 部門で {ranking} 位。"
+    text: "{year}年、{name}はGitHubで{delta}スターを獲得し、{category}カテゴリで{ranking}位になりました。"
     action: Tweet
   months: "1月 2月 3月 4月 5月 6月 7月 8月 9月 10月 11月 12月"
   created: "作成日"
   homepage: "WEB サイト"
+
+  
