Add CSS Frameworks category

--- a/i18n/messages/2020/en.json
+++ b/i18n/messages/2020/en.json
@@ -25,6 +25,7 @@
     "ide": "IDEs & Editors",
     "ssg": "Static Sites",
     "cssinjs": "CSS in JavaScript",
+    "cssframework": "CSS Frameworks",
     "graphql": "GraphQL",
     "misc": "Miscellaneous",
     "learning": "Learning Resource"
