Rename Compilers section

--- a/i18n/messages/2020/en.json
+++ b/i18n/messages/2020/en.json
@@ -19,7 +19,7 @@
     "vue": "Vue Ecosystem",
     "angular": "Angular Ecosystem",
     "mobile": "Mobile",
-    "compiler": "Compilers",
+    "compiler": "JavaScript Flavors",
     "build": "Build Tools",
     "testframework": "Testing",
     "ide": "IDEs & Editors",
