Fix GitHub/GitLab spelling (#65)

--- a/i18n/messages/2016/zh.json
+++ b/i18n/messages/2016/zh.json
@@ -8,7 +8,7 @@
   },
   "introduction": {
     "table_of_contents": "目录",
-    "explanation": "下列图表对比了各个项目 Github 上 2016 年新增 star 的数量。分析的项目主要来自 {link}，这里列出了 WEB 领域的最佳项目。"
+    "explanation": "下列图表对比了各个项目 GitHub 上 2016 年新增 star 的数量。分析的项目主要来自 {link}，这里列出了 WEB 领域的最佳项目。"
   },
   "conclusion": "总结",
   "categories": {
