--- a/i18n/messages/2017/ja.json
+++ b/i18n/messages/2017/ja.json
@@ -8,7 +8,7 @@
   },
   "introduction": {
     "table_of_contents": "目次",
-    "explanation": "本サイトに掲載したチャートは、2017年の12か月間にGithubでカウントされたスター数をプロジェクト別に比較したものです。分析対象のプロジェクトは {link} から収集したものです。 {link} では、Webテクノロジに関連するベストプロジェクトをまとめています。"
+    "explanation": "本サイトに掲載したチャートは、2017年の12か月間にGitHubでカウントされたスター数をプロジェクト別に比較したものです。分析対象のプロジェクトは {link} から収集したものです。 {link} では、Webテクノロジに関連するベストプロジェクトをまとめています。"
   },
   "conclusion": "おわりに",
   "categories": {
