--- a/i18n/messages/2020/ru.json
+++ b/i18n/messages/2020/ru.json
@@ -8,7 +8,7 @@
   },
   "introduction": {
     "table_of_contents": "Содержание",
-    "explanation": "В представленных ниже графиках сравнивается количество звёзд на Github за последние 12 месяцев. Мы проанализировали проекты, участвующие в {link}, отобранного списка лучших веб-проектов. Нажмите на проект, чтобы узнать подробнее про него."
+    "explanation": "В представленных ниже графиках сравнивается количество звёзд на GitHub за последние 12 месяцев. Мы проанализировали проекты, участвующие в {link}, отобранного списка лучших веб-проектов. Нажмите на проект, чтобы узнать подробнее про него."
   },
   "conclusion": "Заключение",
   "categories": {
