--- a/i18n/messages/2019/zh.json
+++ b/i18n/messages/2019/zh.json
@@ -8,7 +8,7 @@
   },
   "introduction": {
     "table_of_contents": "目录",
-    "explanation": "下列图表对比了各个项目在 Github 上于过去 12 个月新增的 star 数量。分析的数据来源为 {link} 网站 ，一个 WEB 领域优秀项目的精选网站。通过点击项目，可以查看更多信息。"
+    "explanation": "下列图表对比了各个项目在 GitHub 上于过去 12 个月新增的 star 数量。分析的数据来源为 {link} 网站 ，一个 WEB 领域优秀项目的精选网站。通过点击项目，可以查看更多信息。"
   },
   "conclusion": "总结",
   "categories": {
